--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@google-cloud/documentai": "^8.9.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0"
   },
